fix homepage, specifically the gift of music and slider div that was giving white space, this should remove it

--- a/wp-content/themes/music-heals/sass/_frontpage.scss
+++ b/wp-content/themes/music-heals/sass/_frontpage.scss
@@ -1,4 +1,3 @@
-
 //===FrontPage PHP===//
 
 .home .site-header {
@@ -129,6 +128,12 @@
   background: url(../../assets/proudly-canadian-image.svg) no-repeat center 1px;
   background-size: contain, cover;
   height: 48vh;
+}
+
+@media only screen and (min-width: 1080px) {
+.slider-image-1, .slider-image-2, .slider-image-3 {
+    height: 100vh;
+}
 }
 
 // NEWS AND EVENTS SECTION
