--- a/wp-content/themes/music-heals/style.css
+++ b/wp-content/themes/music-heals/style.css
@@ -504,8 +504,11 @@ button {
 
 .box-padding {
   border-bottom: 1.3rem solid white;
-  border-bottom: 1.3rem solid white;
   height: 400px; }
+
+@media only screen and (min-width: 1080px) {
+  .box-padding {
+    border: none; } }
 
 @media only screen and (min-width: 1080px) {
   .container {
@@ -1032,6 +1035,10 @@ object {
   background: url(../../assets/proudly-canadian-image.svg) no-repeat center 1px;
   background-size: contain, cover;
   height: 48vh; }
+
+@media only screen and (min-width: 1080px) {
+  .slider-image-1, .slider-image-2, .slider-image-3 {
+    height: 100vh; } }
 
 .news-and-events-section {
   width: 100%;
